--- a/src/FeatureFlag.Forms/FeatureFlag.Forms.csproj
+++ b/src/FeatureFlag.Forms/FeatureFlag.Forms.csproj
@@ -7,9 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
+        <PackageReference Include="MSBuild.Sdk.Extras" Version="1.6.60" PrivateAssets="All" />
+        <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
     </ItemGroup>
 
     <Import Project="..\FeatureFlag.Shared\FeatureFlag.Shared.projitems" Label="Shared" />
-    
+    <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
 </Project>
