--- a/src/FeatureFlag.Forms/FeatureFlag.Forms.csproj
+++ b/src/FeatureFlag.Forms/FeatureFlag.Forms.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFrameworks>netstandard1.0;netstandard2.0</TargetFrameworks>
         <RootNamespace>FeatureFlag</RootNamespace>
         <DefineConstants>XAMARIN_FORMS</DefineConstants>
     </PropertyGroup>
@@ -9,6 +9,10 @@
     <ItemGroup>
         <PackageReference Include="MSBuild.Sdk.Extras" Version="1.6.60" PrivateAssets="All" />
         <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
+    </ItemGroup>
+    
+    <ItemGroup Condition="$(TargetFramework.StartsWith('netstandard1.'))">
+        <PackageReference Include="System.ComponentModel" Version="4.3.0" />
     </ItemGroup>
 
     <Import Project="..\FeatureFlag.Shared\FeatureFlag.Shared.projitems" Label="Shared" />
