--- a/src/FeatureFlag/FeatureFlag.csproj
+++ b/src/FeatureFlag/FeatureFlag.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFrameworks>netstandard1.0;netstandard2.0</TargetFrameworks>
     </PropertyGroup>
 
     <Import Project="..\FeatureFlag.Shared\FeatureFlag.Shared.projitems" Label="Shared" />
