--- a/src/FeatureFlag.Forms/FeatureFlag.Forms.csproj
+++ b/src/FeatureFlag.Forms/FeatureFlag.Forms.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netstandard1.0;netstandard2.0</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0;Xamarin.iOS10;MonoAndroid80;MonoAndroid81</TargetFrameworks>
         <RootNamespace>FeatureFlag</RootNamespace>
         <DefineConstants>XAMARIN_FORMS</DefineConstants>
     </PropertyGroup>
@@ -10,12 +10,36 @@
         <PackageReference Include="MSBuild.Sdk.Extras" Version="1.6.60" PrivateAssets="All" />
         <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
     </ItemGroup>
+
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+        <!-- Debug specific includes -->
+        <DebugType>full</DebugType>
+        <DebugSymbols>true</DebugSymbols>
+    </PropertyGroup>
     
-    <ItemGroup Condition="$(TargetFramework.StartsWith('netstandard1.'))">
-        <PackageReference Include="System.ComponentModel" Version="4.3.0" />
+    <ItemGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid')) ">
+        <!-- Android specific includes -->
+    </ItemGroup>
+    <ItemGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid81')) ">
+        <!-- Android 8.1 specific includes -->
+        <PackageReference Include="Xamarin.Android.Support.Annotations" Version="27.0.2.1" />
+        <PackageReference Include="Xamarin.Android.Support.Compat" Version="27.0.2.1" />
+        <PackageReference Include="Xamarin.Android.Support.Core.Utils" Version="27.0.2.1" />
+    </ItemGroup>
+    <ItemGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid80')) ">
+        <!-- Android 8.0 specific includes -->
+        <PackageReference Include="Xamarin.Android.Support.Annotations" Version="26.1.0.1" />
+        <PackageReference Include="Xamarin.Android.Support.Compat" Version="26.1.0.1" />
+        <PackageReference Include="Xamarin.Android.Support.Core.Utils" Version="26.1.0.1" />
+    </ItemGroup>
+    
+    <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.iOS')) ">
+        <!-- iOS specific includes -->
     </ItemGroup>
 
     <Import Project="..\FeatureFlag.Shared\FeatureFlag.Shared.projitems" Label="Shared" />
+    <Import Project="..\FeatureFlag.Shared.Driod\FeatureFlag.Shared.Driod.projitems" Label="Droid" Condition="$(TargetFramework.StartsWith('MonoAndroid'))" />
+    <Import Project="..\FeatureFlag.Shared.Touch\FeatureFlag.Shared.Touch.projitems" Label="Touch" Condition="$(TargetFramework.StartsWith('Xamarin.iOS'))" />
+    <Import Project="..\FeatureFlag.Shared.NetStandard\FeatureFlag.Shared.NetStandard.projitems" Label="NetStandard" Condition="$(TargetFramework.StartsWith('netstandard'))" />
     <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
-    
 </Project>
