--- a/src/FeatureFlag.Forms/FeatureFlag.Forms.csproj
+++ b/src/FeatureFlag.Forms/FeatureFlag.Forms.csproj
@@ -4,6 +4,7 @@
         <TargetFrameworks>netstandard2.0;Xamarin.iOS10;MonoAndroid80;MonoAndroid81</TargetFrameworks>
         <RootNamespace>FeatureFlag</RootNamespace>
         <DefineConstants>XAMARIN_FORMS</DefineConstants>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
