--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -19,5 +19,8 @@
         <RepositoryUrl>https://github.com/ChaseFlorell/FeatureFlag</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageLicenseUrl>https://raw.githubusercontent.com/ChaseFlorell/FeatureFlag/master/LICENSE</PackageLicenseUrl>
+
+        <PackageTags>netstandard, dotnet, .net, feature flag, feature toggle, featureflag, featuretoggle</PackageTags>
+        <Copyright>© FloMedia Group Inc. All rights reserved.</Copyright>
     </PropertyGroup>
 </Project>
