--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -15,6 +15,7 @@
         <AssemblyFileVersion>1.0.0.0</AssemblyFileVersion>
         <Version>1.0.0</Version>
         <PackageVersion>$(Version)$(VersionSuffix)</PackageVersion>
+        <IncludeSymbols>true</IncludeSymbols>
         
         <RepositoryUrl>https://github.com/ChaseFlorell/FeatureFlag</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
