--- a/example/Example/Example.csproj
+++ b/example/Example/Example.csproj
@@ -14,7 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\FeatureFlag.Forms\FeatureFlag.Forms.csproj" />
+      <ProjectReference Include="..\..\src\FutureFlag.Forms\FutureFlag.Forms.csproj" />
     </ItemGroup>
     
 </Project>
