--- a/example/Example.iOS/Info.plist
+++ b/example/Example.iOS/Info.plist
@@ -23,15 +23,15 @@
     <key>MinimumOSVersion</key>
     <string>12.1</string>
     <key>CFBundleDisplayName</key>
-    <string>FeatureFlag</string>
+    <string>FutureFlag</string>
     <key>CFBundleIdentifier</key>
-    <string>com.companyname.FeatureFlag</string>
+    <string>com.companyname.FutureFlag</string>
     <key>CFBundleVersion</key>
     <string>1.2.0</string>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>CFBundleName</key>
-    <string>FeatureFlag</string>
+    <string>FutureFlag</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
 </dict>
