--- a/example/Example/Example.csproj
+++ b/example/Example/Example.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="NodaTime" Version="2.4.4" />
         <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
     </ItemGroup>
 
