--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -19,7 +19,7 @@
         
         <RepositoryUrl>https://github.com/ChaseFlorell/FutureFlag</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
-        <License type="expression">Ms-PL</License>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
         
         <PackageTags>netstandard, dotnet, .net, feature flag, feature toggle, featureflag, featuretoggle</PackageTags>
         <Copyright>© FloMedia Group Inc. All rights reserved.</Copyright>
