[CF] adds a JsonRestFutureFlag. Fixes #7.

--- a/src/FutureFlag.Forms/FutureFlag.Forms.csproj
+++ b/src/FutureFlag.Forms/FutureFlag.Forms.csproj
@@ -16,6 +16,7 @@
     <ItemGroup>
         <PackageReference Include="MSBuild.Sdk.Extras" Version="1.6.60" PrivateAssets="All" />
         <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
+        <PackageReference Include="System.Json" Version="4.5.0" />
     </ItemGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
