--- a/src/FutureFlag/FutureFlag.csproj
+++ b/src/FutureFlag/FutureFlag.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
         <PackageReference Include="MSBuild.Sdk.Extras" Version="1.6.60" PrivateAssets="All" />
+        <PackageReference Include="System.Json" Version="4.5.0" />
     </ItemGroup>    
     
     <ItemGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid')) ">
