--- a/src/FutureFlag/FutureFlag.csproj
+++ b/src/FutureFlag/FutureFlag.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
         <PackageReference Include="MSBuild.Sdk.Extras" Version="1.6.60" PrivateAssets="All" />
         <PackageReference Include="System.Json" Version="4.5.0" />
+        <PackageReference Include="System.Net.Http" Version="4.3.4" />
     </ItemGroup>    
     
     <ItemGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid')) ">
