--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -19,7 +19,7 @@
         
         <RepositoryUrl>https://github.com/ChaseFlorell/FutureFlag</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
-        <PackageLicenseUrl>https://raw.githubusercontent.com/ChaseFlorell/FutureFlag/master/LICENSE</PackageLicenseUrl>
+        <PackageLicenseExpression>MS-PL</PackageLicenseExpression>
 
         <PackageTags>netstandard, dotnet, .net, feature flag, feature toggle, featureflag, featuretoggle, future flag, futureflag</PackageTags>
         <Copyright>© FloMedia Group Inc. All rights reserved.</Copyright>
