--- a/src/FutureFlag.Forms/FutureFlag.Forms.csproj
+++ b/src/FutureFlag.Forms/FutureFlag.Forms.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="MSBuild.Sdk.Extras/2.0.46">
 
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;Xamarin.iOS10;MonoAndroid81;MonoAndroid90</TargetFrameworks>
@@ -14,9 +14,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="MSBuild.Sdk.Extras" Version="1.6.60" PrivateAssets="All" />
-        <PackageReference Include="Xamarin.Forms" Version="3.5" />
-        <PackageReference Include="System.Json" Version="4.4.0" />
+        <PackageReference Include="MSBuild.Sdk.Extras" Version="2.0.46" PrivateAssets="All" />
+        <PackageReference Include="Xamarin.Forms" Version="3.5.0.129452" />
+        <PackageReference Include="System.Json" Version="4.6.0" />
     </ItemGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
