--- a/src/FutureFlag/FutureFlag.csproj
+++ b/src/FutureFlag/FutureFlag.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="MSBuild.Sdk.Extras/2.0.46">
 
     <PropertyGroup>        
         <TargetFrameworks>netstandard2.0;Xamarin.iOS10;MonoAndroid81;MonoAndroid90;net452</TargetFrameworks>
@@ -9,13 +9,12 @@
         <Summary>FutureFlag: a feature flag library designed to target any .net application supporting netstandard 2.0</Summary>
         <Description>FutureFlag: a feature flag library designed to target any .net application supporting netstandard 2.0</Description>
         <Title>Future Flag</Title>
-
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="MSBuild.Sdk.Extras" Version="1.6.60" PrivateAssets="All" />
-        <PackageReference Include="System.Json" Version="4.4.0" />
-        <PackageReference Include="System.Net.Http" Version="4.0.0" />
+        <PackageReference Include="MSBuild.Sdk.Extras" Version="2.0.46" PrivateAssets="All" />
+        <PackageReference Include="System.Json" Version="4.6.0" />
+        <PackageReference Include="System.Net.Http" Version="4.3.4" />
     </ItemGroup>    
     
     <ItemGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid')) ">
