--- a/tests/FutureFlag.Tests/packages.config
+++ b/tests/FutureFlag.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.4.0" targetFramework="net471" />
+  <package id="FakeItEasy" version="6.0.1" targetFramework="net471" />
   <package id="FluentAssertions" version="5.9.0" targetFramework="net471" />
   <package id="Moq" version="4.7.145" targetFramework="net471" />
   <package id="NUnit" version="3.12.0" targetFramework="net471" />
