--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@
       - development
   image: macOS
   init:
-    - ps: Update-AppveyorBuild -Version "$(Get-Date -format yyyy.M).$env:appveyor_build_number"
+    - sh: Update-AppveyorBuild -Version "$(Get-Date -format yyyy.M).$env:appveyor_build_number"
   dotnet_csproj:
     patch: true
     file: '**\Directory.Build.props'
@@ -17,7 +17,7 @@
   environment:
     CAKE_SETTINGS_SKIPPACKAGEVERSIONCHECK: true
   build_script:
-    - ps: ./build
+    - sh: ./build
   artifacts:
     - path: '**\FutureFlag.*.nupkg'
   deploy:
@@ -32,7 +32,7 @@
       - master
   image: macOS
   init:
-    - ps: Update-AppveyorBuild -Version "$(Get-Date -format yyyy.M).$env:appveyor_build_number"
+    - sh: Update-AppveyorBuild -Version "$(Get-Date -format yyyy.M).$env:appveyor_build_number"
   dotnet_csproj:
     patch: true
     file: '**\Directory.Build.props'
@@ -44,7 +44,7 @@
   environment:
     CAKE_SETTINGS_SKIPPACKAGEVERSIONCHECK: true
   build_script:
-    - ps: ./build
+    - sh: ./build
   artifacts:
     - path: '**\FutureFlag.*.nupkg'
   deploy:
