--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@
       - development
   image: macOS
   init:
-    - sh: appveyor UpdateBuild -Version "${$(date '+%Y.%m')}.${$APPVEYOR_BUILD_NUMBER}"
+    - sh: appveyor UpdateBuild -Version "${$(date '+%Y.%m')}.$APPVEYOR_BUILD_NUMBER"
   dotnet_csproj:
     patch: true
     file: '**\Directory.Build.props'
@@ -32,7 +32,7 @@
       - master
   image: macOS
   init:
-    - sh: appveyor UpdateBuild -Version "${$(date '+%Y.%m')}.${$APPVEYOR_BUILD_NUMBER}"
+    - sh: appveyor UpdateBuild -Version "${$(date '+%Y.%m')}.$APPVEYOR_BUILD_NUMBER"
   dotnet_csproj:
     patch: true
     file: '**\Directory.Build.props'
