[CF] ( Issue #13 ) Updated old dependencies (#14)
* [CF] ( Issue #13 ) Updated old dependencies

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,9 @@
 <Project>
     <PropertyGroup>
-
+        
+        <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+        <GenerateProjectSpecificOutputFolder>true</GenerateProjectSpecificOutputFolder>
+        <LangVersion>latest</LangVersion>
         <PackOnBuild>true</PackOnBuild>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <GenerateProjectSpecificOutputFolder>true</GenerateProjectSpecificOutputFolder>
