--- a/example/Example/Example.csproj
+++ b/example/Example/Example.csproj
@@ -10,12 +10,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="NodaTime" Version="2.4.7" />
-        <PackageReference Include="Xamarin.Forms" Version="3.5.0.169047" />
+        <PackageReference Include="NodaTime" />
+        <PackageReference Include="Xamarin.Forms" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\FutureFlag.Forms\FutureFlag.Forms.csproj" />
+        <ProjectReference Include="..\..\src\FutureFlag.Forms\FutureFlag.Forms.csproj" />
     </ItemGroup>
-    
+
 </Project>
